support boolean properties

--- a/ORM-source/ORM/templates/DataManager.m.template
+++ b/ORM-source/ORM/templates/DataManager.m.template
@@ -80,10 +80,10 @@
 					NSInteger64AttributeType = 300,
 					NSDecimalAttributeType = 400,
 					NSDoubleAttributeType = 500,
-					NSFloatAttributeType = 600,
-					NSStringAttributeType = 700,
-					NSBooleanAttributeType = 800,
-					NSDateAttributeType = 900,
+					-NSFloatAttributeType = 600,
+					-NSStringAttributeType = 700,
+					-NSBooleanAttributeType = 800,
+					-NSDateAttributeType = 900,
 					NSBinaryDataAttributeType = 1000,
 					NSTransformableAttributeType = 1800,
 					NSObjectIDAttributeType = 2000
